# bazel-rules

./: BUILD.bazel  MODULE.bazel  README.md
flux_deploy/: BUILD.bazel  defs.bzl  extensions.bzl
tests/: BUILD.bazel  fake_flux.sh  fake_image_push_marker.txt  runfiles_push.bzl  status_artifact_prefix.sh
tests/deploy/app/base/: deployment.yaml
