load("//flux_deploy:defs.bzl", "flux_push", "image_kustomization", "image_ref", "publish_bundle_set", "push_bundle")
load(":runfiles_push.bzl", "fake_push_with_runfile")

filegroup(
    name = "deploy_srcs",
    srcs = glob(["deploy/app/**"]),
)

image_ref(
    name = "app_image",
    yaml_ref = "example.com/acme/app",
    repository_suffix = "app",
    image = ":app",
    push = ":fake_image_push",
)

image_ref(
    name = "app_image_flaky_push",
    yaml_ref = "example.com/acme/app",
    repository_suffix = "app",
    image = ":app",
    push = ":fake_image_push_flaky",
)

image_kustomization(
    name = "app_deploy",
    artifact_suffix = "app-deploy",
    bundle_pull_secret = "bundle-pull-secret",
    namespace_id = "bundle-namespace",
    srcs = [":deploy_srcs"],
    images = [":app_image"],
    source_prefix = "tests/deploy/app",
    stamp = False,
)

image_kustomization(
    name = "app_deploy_flaky_push",
    artifact_suffix = "app-deploy",
    srcs = [":deploy_srcs"],
    images = [":app_image_flaky_push"],
    source_prefix = "tests/deploy/app",
    stamp = False,
)

image_kustomization(
    name = "migration_deploy",
    artifact_suffix = "migration-deploy",
    bundle_name = "migration",
    srcs = [":deploy_srcs"],
    source_prefix = "tests/deploy/app",
    overlay_path = "base",
    force = True,
    stamp = False,
)

flux_push(
    name = "app_deploy_push",
    artifact = "oci://example.com/acme/app-deploy",
    bundle = ":app_deploy",
    flux_tool = ":fake_flux",
)

flux_push(
    name = "raw_app_deploy_push",
    srcs = [":deploy_srcs"],
    artifact = "oci://example.com/acme/raw-app-deploy",
    flux_tool = ":fake_flux",
    source_prefix = "tests/deploy/app",
)

fake_push_with_runfile(
    name = "fake_image_push",
    data = ":fake_image_push_marker.txt",
)

fake_push_with_runfile(
    name = "fake_image_push_flaky",
    data = ":fake_image_push_marker.txt",
    fail_once_with_manifest_unknown = True,
)

genrule(
    name = "fake_flux",
    srcs = [":fake_flux.sh"],
    outs = ["fake_flux_tool"],
    cmd = "cp $(location :fake_flux.sh) $@ && chmod +x $@",
    executable = True,
)

push_bundle(
    name = "publish_app",
    bundles = [":app_deploy"],
    flux_tool = ":fake_flux",
    push_prefix = "example.com/acme",
    tag = "test",
)

push_bundle(
    name = "publish_app_stamped_artifact_prefix",
    bundles = [":app_deploy"],
    artifact_prefix = "{STABLE_ARTIFACT_PREFIX}",
    flux_tool = ":fake_flux",
    push_prefix = "{STABLE_PUSH_PREFIX}",
    stamp = True,
    tag = "test",
    tags = ["manual"],
)

genrule(
    name = "stamped_artifact_prefix_test",
    outs = ["stamped_artifact_prefix_test.out"],
    cmd = """
set -euo pipefail
output="$$($(location :publish_app_stamped_artifact_prefix) --skip-images --push-prefix runtime.example/acme)"
case "$${output}" in
  *"push artifact oci://stamped-artifacts.example/acme/app-deploy:test"*) ;;
  *)
    echo "expected stamped artifact prefix in fake flux output" >&2
    echo "$${output}" >&2
    exit 1
    ;;
esac
case "$${output}" in
  *"{STABLE_ARTIFACT_PREFIX}"*|*"oci://runtime.example/acme/app-deploy:test"*)
    echo "artifact prefix was not resolved from the explicit stamped value" >&2
    echo "$${output}" >&2
    exit 1
    ;;
esac
printf '%s\\n' "$${output}" > "$@"
""",
    tags = ["manual"],
    tools = [":publish_app_stamped_artifact_prefix"],
)

push_bundle(
    name = "publish_app_flaky_image_push",
    bundles = [":app_deploy_flaky_push"],
    flux_tool = ":fake_flux",
    push_prefix = "example.com/acme",
    tag = "test",
)

publish_bundle_set(
    name = "publish",
    bundles = [
        ":app_deploy",
        ":migration_deploy",
    ],
    flux_tool = ":fake_flux",
    bundle_pull_secret = "set-pull-secret",
    namespace_id = "set-namespace",
    push_prefix = "example.com/acme",
    manifest_tag = "manifest-test",
    tag = "test",
)

publish_bundle_set(
    name = "publish_multi",
    bundles = [":app_deploy"],
    flux_tool = ":fake_flux",
    push_prefix = "example.com/acme",
    push_tags = [
        "git-sha",
        "latest",
    ],
    compare_tag = "latest",
    skip_existing = True,
)

push_bundle(
    name = "publish_real_flux_bundle",
    bundles = [":migration_deploy"],
    push_images = False,
)
